Item view: Update item positions when delegate changes

In QComboBox, when you set editable to true on the QComboBox,
the delegates will change from QComboBoxMenuDelegate to
QComboBoxDelegate. In some styles, such as Fusion, the size
of the delegates will be different.

So when the delegate is updated, we need to redo the list view
layout, otherwise the items will be positioned based on the
size of the old delegates, but the popup for the combo box will
be sized for the new. This caused the popup to be too small for
its items and display a scroll bar.

[ChangeLog][QComboBox] Fixed positions of items when QComboBox
is set as editable in Fusion style.

Change-Id: Ia43ef96efbeee4d6d596c0674bf3898ef94f89a1
Task-number: QTBUG-33537
Reviewed-by: Mitch Curtis <mitch.curtis@digia.com>
Reviewed-by: Friedemann Kleint <Friedemann.Kleint@digia.com>